--- a/View/AndroidViews/AccommodationPage.xaml
+++ b/View/AndroidViews/AccommodationPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="BookingApp.View.AndroidViews.AccomodationPage"
+﻿<Page x:Class="BookingApp.View.AndroidViews.AccommodationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
-      Title="AccomodationPage">
+      Title="AccommodationPage">
     <Page.Resources>
         <BitmapImage x:Key="AddIcon" UriSource="../../Resources/Images/add2.png"/>
     </Page.Resources>
@@ -28,13 +28,13 @@
                     <Button Width="40" Height="40" Click="AddAccomodation_Click" Background="#BABDE2">
                         <Image Source="{StaticResource AddIcon}"/>
                     </Button>
-                    <Label Content="Add New Accomodation" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
+                    <Label Content="Add New Accommodation" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
                 </StackPanel>
             </Border>
         </Grid>
         <Border Grid.Row="1" BorderBrush="Black" BorderThickness="0,2,0,0">
             <ScrollViewer Height="500" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalScrollBarVisibility="Hidden">
-                <ItemsControl Height="600" ItemsSource="{Binding accomodationDTOs}">
+                <ItemsControl Height="600" ItemsSource="{Binding accommodationDTOs}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Border Background="#FFFCF5" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20">
