--- a/View/DesktopViews/TouristMainWindow.xaml
+++ b/View/DesktopViews/TouristMainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
         mc:Ignorable="d"
-        Title="TouristMainWindow" Height="450" Width="800">
+        Title="TouristMainWindow" Height="768" Width="1366"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <DataGrid ItemsSource="{Binding ToursOnDisplay}"
+                  AutoGenerateColumns="True"
+                  IsReadOnly="True"></DataGrid>
     </Grid>
 </Window>
