--- a/View/WebViews/BookPage.xaml
+++ b/View/WebViews/BookPage.xaml
@@ -7,48 +7,33 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
-        <Grid Background="LightGray" Height="110" VerticalAlignment="Top" HorizontalAlignment="Right" Width="800">
-            <Button x:Name="buttonFilter" Content="Filter" Margin="705,71,0,0" Height="29" VerticalAlignment="Top" HorizontalAlignment="Left" Width="85"></Button>
-            <Button x:Name="buttonClear" Content="Clear" Margin="735,10,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="55"></Button>
+        <Grid Background="LightGray" Height="80" VerticalAlignment="Top" HorizontalAlignment="Right" Width="800">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="337*"/>
+                <ColumnDefinition Width="317*"/>
+                <ColumnDefinition Width="146*"/>
+            </Grid.ColumnDefinitions>
+
+            <Label x:Name="labelLocation" Content="Location" FontSize="15" Width="80" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Right"/>
+            <ComboBox x:Name="comboBoxLocation" Width="232" Height="20" Margin="95,15,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            <Label x:Name="labelType" Content="Type" FontSize="15" Width="80" Height="30" Margin="10,45,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Right"/>
+            <ComboBox x:Name="comboBoxType" Margin="95,50,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="140"/>
+
+            <Label x:Name="labelName" Content="Name" FontSize="15" Width="60" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Grid.Column="1"/>
+            <TextBox x:Name="textBoxName" Grid.Column="1" Margin="75,15,0,0" HorizontalAlignment="Left" Width="232" Height="20" VerticalAlignment="Top"/>
+            <Label x:Name="labelDays" Content="Days" FontSize="15" Width="60" Height="30" Margin="10,45,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Grid.Column="1"/>
+            <TextBox x:Name="textBoxDays" Grid.Column="1" Margin="75,50,0,0" HorizontalAlignment="Left" Width="60" Height="20" VerticalAlignment="Top"/>
+            <Label x:Name="labelGuests" Content="Guests" FontSize="15" Width="60" Height="30" Margin="140,45,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Grid.Column="1"/>
+            <TextBox x:Name="textBoxGuests" Grid.Column="1" Margin="205,50,0,0" HorizontalAlignment="Left" Width="60" Height="20" VerticalAlignment="Top"/>
+
+            <Button x:Name="buttonFilter" Content="Filter" Margin="48,40,0,0" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88" Grid.Column="2"/>
+            <Button x:Name="buttonClear" Content="Clear" Margin="90,10,0,0" Height="20" VerticalAlignment="Top" Grid.Column="2" HorizontalAlignment="Left" Width="46"/>
         </Grid>
-        <ScrollViewer Margin="0,110,0,0" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Margin="0,80,0,0" VerticalScrollBarVisibility="Auto">
             <ItemsControl x:Name="itemsControlAccommodations" ItemsSource="{Binding _accommodationDTOs}" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center" >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border Margin="5 5 5 5" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="*"/>
-                                </Grid.RowDefinitions>
-
-                                <Border Background="LightGray" Grid.ColumnSpan="2" Grid.Row="0" BorderThickness="2" Width="350" CornerRadius="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                    <TextBlock Grid.Row="0" FontSize="18" Margin="0 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Name}"/>
-                                </Border>
-
-                                <!-- Image mockup -->
-                                <Border Background="LightBlue" Grid.Column="0" Grid.Row="1" Height="100" Width="100" CornerRadius="5"/>
-
-                                <Grid Grid.Column="1" Grid.Row="1" Margin="0 0 0 10">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="auto"/>
-                                        <RowDefinition Height="auto"/>
-                                        <RowDefinition Height="auto"/>
-                                        <RowDefinition Height="auto"/>
-                                    </Grid.RowDefinitions>
-
-                                    <TextBlock Grid.Row="0" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding DisplayLocation, StringFormat=Location: {0}}"/>
-                                    <TextBlock Grid.Row="1" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding Type, StringFormat=Category: {0}}"/>
-                                    <TextBlock Grid.Row="2" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding MinReservationDays, StringFormat=Minimum days: {0}}"/>
-                                    <TextBlock Grid.Row="3" Margin="10 10 0 0" HorizontalAlignment="Left" Text="{Binding MaxGuestNumber, StringFormat=Capacity: {0}}"/>
-                                </Grid>
-                            </Grid>
-                        </Border>
+                        <local:AccommodationCard/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
                 <ItemsControl.ItemsPanel>
