--- a/View/AndroidViews/MainWindow.xaml
+++ b/View/AndroidViews/MainWindow.xaml
@@ -17,21 +17,26 @@
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Background="#374375">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Background="#374375" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="60"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal" Grid.Column="0" Margin="10,0,0,0">
-                <Button Width="40" Height="40">
+                <Button Width="40" Height="40" Click="HamburgerButton_Click">
                     <Image Source="{StaticResource AddIcon}"/>
                 </Button>
-                <Label Content="My accomodations and statistics" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
+                <Label x:Name="HeaderLabel" Content="My accomodations and statistics" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
             </StackPanel>
             <Button Grid.Column="1" Height="40" Width="40">
                 <Image Source="{StaticResource HelpIcon}"/>
             </Button>
         </Grid>
-        <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+        <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2"/>
+        <Frame x:Name="sideFrame" Grid.Column="0" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
     </Grid>
 </Window>
