--- a/View/WebViews/AccommodationCard.xaml
+++ b/View/WebViews/AccommodationCard.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Margin="5 5 5 5" BorderBrush="Gray" BorderThickness="1" Width="350" CornerRadius="10">
-        <Grid>
+        <Grid MouseLeftButtonDown="AccommodationCardClick">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="110"/>
                 <ColumnDefinition Width="*"/>
