--- a/View/WebViews/GuestMainWindow.xaml
+++ b/View/WebViews/GuestMainWindow.xaml
@@ -9,14 +9,13 @@
         ResizeMode="NoResize">
     <Grid>
         <Grid Background="LightBlue" Height="80" VerticalAlignment="Top">
-            <Button Name="buttonBook" Content="Book" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="120" Click="buttonBook_Click"/>
-            <Button Name="buttonReservations" Content="Reservations" HorizontalAlignment="Left" Margin="120,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="buttonReservations_Click"/>
+            <Button Name="buttonBook" Content="Book" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonBookClick"/>
+            <Button Name="buttonReservations" Content="Reservations" HorizontalAlignment="Left" Margin="120,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120" Click="ButtonReservationsClick"/>
             <Button Name="buttonReviews" Content="Reviews" HorizontalAlignment="Left" Margin="240,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120"/>
             <Button Name="buttonForum" Content="Forums" HorizontalAlignment="Left" Margin="360,0,0,0" VerticalAlignment="Bottom" Height="40" Width="120"/>
         </Grid>
         <Grid x:Name="gridPages" Margin="0,80,0,0" Height="504" VerticalAlignment="Top">
-            <local:BookingPage x:Name="bookPage" Visibility="Collapsed"></local:BookingPage>
-            <local:ReservationsPage x:Name="reservationsPage" Visibility="Collapsed"></local:ReservationsPage>
+            <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" Margin="0,0,0,10"/>
         </Grid>
     </Grid>
 </Window>
