--- a/View/AndroidViews/ReservationReviewsPage.xaml
+++ b/View/AndroidViews/ReservationReviewsPage.xaml
@@ -29,15 +29,15 @@
                     <Button Grid.Row="0" Grid.Column="2" Width="120" Height="40" Content="View Guest Grade">
                         </Button>
 
-                    <ListView ItemsSource="{Binding studCollection, UpdateSourceTrigger=PropertyChanged}"
-          SelectedItem="{Binding selectedStudent, UpdateSourceTrigger=PropertyChanged}"
+                    <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}"
+          SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}"
           SelectionMode="Single" Grid.Row="1" Grid.ColumnSpan="4" Grid.Column="0">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Accommodation" Width="100" DisplayMemberBinding="{Binding Index}"/>
-                                <GridViewColumn Header="Start Date" Width="100" DisplayMemberBinding="{Binding Name}"/>
-                                <GridViewColumn Header="End Date" Width="100" DisplayMemberBinding="{Binding Surname}"/>
-                                <GridViewColumn Header="Graded" Width="100">
+                                <GridViewColumn Header="Accommodation" Width="160" DisplayMemberBinding="{Binding AccommodationName}"/>
+                                <GridViewColumn Header="Start Date" Width="80" DisplayMemberBinding="{Binding StartDate}"/>
+                                <GridViewColumn Header="End Date" Width="80" DisplayMemberBinding="{Binding EndDate}"/>
+                                <GridViewColumn Header="Graded" Width="80">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <CheckBox IsChecked="{Binding Graded}" IsEnabled="False"/>
