--- a/View/DesktopViews/TouristHomePage.xaml
+++ b/View/DesktopViews/TouristHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="BookingApp.View.DesktopViews.HomePage"
+﻿<Page x:Class="BookingApp.View.DesktopViews.TouristHomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="HomePage">
+      Title="TouristHomePage">
 
     <Grid>
         <Grid.RowDefinitions>
