--- a/View/TabletView/GuideMainWindow.xaml
+++ b/View/TabletView/GuideMainWindow.xaml
@@ -14,9 +14,9 @@
             </Button>
         </Grid>
         <Grid DockPanel.Dock="Bottom" Background="#696969">
-            
-            
-            <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" VerticalAlignment="Bottom" Height="726"/>
+
+
+            <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" VerticalAlignment="Center" Height="726"/>
             <Frame x:Name="menuBarFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="674" Width="300"/>
         </Grid>
     </DockPanel>
