--- a/View/AndroidViews/AssignGradeWindow.xaml
+++ b/View/AndroidViews/AssignGradeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.View.AndroidViews"
         mc:Ignorable="d"
-        Title="AssignGradeWindow" Height="450" Width="350"
+        Title="AssignGradeWindow" Height="460" Width="350"
         WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,16 +16,49 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Content="Reservation info:" FontFamily="Global Sans Serif" FontSize="20" Grid.Row="0" Grid.Column="0" FontWeight="Bold"/>
-        <TextBlock Text="Accomodation name" Grid.Column="0" Grid.Row="1" FontSize="16"/>
-        <TextBlock Text="start date - end date" Grid.Column="1" Grid.Row="1" FontSize="16"/>
-        <TextBlock Text="Guest username" Grid.Column="0" Grid.Row="2" FontSize="16"/>
+        <TextBlock Text="Accomodation name" Grid.Column="0" Grid.Row="1" FontSize="16" HorizontalAlignment="Center"/>
+        <TextBlock Text="start date - end date" Grid.Column="1" Grid.Row="1" FontSize="16" HorizontalAlignment="Center"/>
+        <TextBlock Text="Guest username" Grid.Column="0" Grid.Row="2" FontSize="16" HorizontalAlignment="Center"/>
         <Border BorderBrush="Black" BorderThickness="0,0,0,2" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2"/>
+
+        <StackPanel  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Label Content="Cleanness Grade: " FontSize="14" FontFamily="Global Sans Serif" HorizontalAlignment="Center" />
+            <Label Content="{Binding ElementName=SliderCleanness, Path=Value}" HorizontalAlignment="Center" />
+        </StackPanel>
+
+        <Slider x:Name="SliderCleanness" Grid.Row="3" Value="{Binding ReviewDTO.GuestCleannessGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
+                Width="200" VerticalAlignment="Center" Margin="0,10,0,0" FontSize="14" Grid.Column="0" 
+                Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
+
+        
+            
+        
+
+        
+
+        <StackPanel  Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Label Content="Rule Following Grade: " FontSize="14" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
+            <Label Content="{Binding ElementName=SliderRuleFollowing, Path=Value}" HorizontalAlignment="Center" />
+        </StackPanel>
+
+        <Slider  x:Name="SliderRuleFollowing" Grid.Row="4" Value="{Binding ReviewDTO.RuleFollowingGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                Minimum="1" Maximum="5" TickPlacement="BottomRight" TickFrequency="1" IsSnapToTickEnabled="True"
+                Width="200" VerticalAlignment="Center" Margin="0,10,0,0" FontSize="14" Grid.Column="0" Grid.ColumnSpan="2"
+                HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
+
+        <Label Grid.Row="5" Content="Additional Comments: " FontSize="14" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
+        <TextBox Grid.Row="6" Text="{Binding ReviewDTO.OwnerComment,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" FontSize="13" Grid.Column="0" Grid.ColumnSpan="2" Width="250" Height="50"  HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Global Sans Serif"/>
+
+        <Button x:Name="CancelButton" Grid.Row="7" Height="60" Width="100" Content="Cancel" Click="CancelButton_Click"/>
+        <Button x:Name="DoneButton" Grid.Row="7" Grid.Column="1" Height="60" Width="100" Content="Done" Click="DoneButton_Click"/>
         
     </Grid>
 </Window>
