--- a/View/AndroidViews/MainWindow.xaml
+++ b/View/AndroidViews/MainWindow.xaml
@@ -38,5 +38,7 @@
         </Grid>
         <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2"/>
         <Frame x:Name="sideFrame" Grid.Column="0" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
+        <Frame x:Name="smallNotificationFrame" Grid.Column="1" Grid.Row="1" Height="40" Width="40" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,10,0"
+               NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
     </Grid>
 </Window>
