--- a/View/WebViews/CreateReservationPage.xaml
+++ b/View/WebViews/CreateReservationPage.xaml
@@ -12,6 +12,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="2">
@@ -42,13 +43,54 @@
                         <TextBlock x:Name="textBoxDays" FontSize="15" Text="{Binding MinReservationDays, StringFormat=MinimumDays: {0}}" Margin="23,10,23,10" Width="150" TextAlignment="Center" Grid.Row="2"/>
                         <TextBlock x:Name="textBoxCapacity" FontSize="15" Text="{Binding MaxGuestNumber, StringFormat=Capacity: {0}}" Margin="23,10,23,10" Width="150" TextAlignment="Center" Grid.Row="3"/>
                     </Grid>
-                    
-                    
-                    
+
+
+
                 </Grid>
             </Border>
 
-            <Grid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="250"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Content="Start date" Grid.Column="0" Grid.Row="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <DatePicker x:Name="datePickerStartDate" Grid.Column="1" Grid.Row="0" Margin="5,16,10,16"/>
+
+                <Label Content="End date" Grid.Column="0" Grid.Row="1" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <DatePicker x:Name="datePickerEndDate" Grid.Column="1" Grid.Row="1" Margin="5,16,10,16"/>
+
+                <Label Content="Days" Grid.Column="0" Grid.Row="2" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <TextBox x:Name="textBoxReservationDays" Grid.Column="1" Grid.Row="2" Margin="5,18,78,18" VerticalContentAlignment="Center"/>
+
+                <Label Content="Guests" Grid.Column="0" Grid.Row="3" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                <DockPanel Grid.Column="1" Grid.Row="2" Margin="5,57,0,0" Grid.RowSpan="2">
+                    <TextBox x:Name="textBoxSlider" Text="{Binding ElementName=slider, Path=Value}" Width="29" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"/>
+                    <Slider x:Name="slider" Grid.Row="4" Grid.Column="1" Margin="5,16,10,16" Minimum="1" Maximum="20" Value="{Binding ElementName=textBoxSlider, Path=Text}" VerticalAlignment="Center" TickFrequency="1" IsSnapToTickEnabled="True"/>
+                </DockPanel>
+
+                <Button x:Name="buttonConfirm" Content="Confirm booking" Grid.Row="4" Margin="90,180,90,25" FontWeight="Bold" FontSize="13" Grid.ColumnSpan="2"/>
+
+            </Grid>
+
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Label Content="Suggested dates" Grid.Row="0" FontSize="20" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <DataGrid Grid.Row="1" Margin="10,0,10,25"/>
+
             </Grid>
         </Grid>
     </Grid>
