--- a/View/WebViews/CreateReservationPage.xaml
+++ b/View/WebViews/CreateReservationPage.xaml
@@ -64,32 +64,38 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Content="Start date" Grid.Column="0" Grid.Row="0" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <DatePicker x:Name="datePickerStartDate" Grid.Column="1" Grid.Row="0" Margin="5,16,10,16"/>
+                <DatePicker x:Name="datePickerStartDate" Grid.Column="1" Grid.Row="0" VerticalContentAlignment="Center" Margin="5,16,10,16" SelectedDateChanged="UpdateSuggestedDates"/>
 
                 <Label Content="End date" Grid.Column="0" Grid.Row="1" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <DatePicker x:Name="datePickerEndDate" Grid.Column="1" Grid.Row="1" Margin="5,16,10,16"/>
+                <DatePicker x:Name="datePickerEndDate" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" Margin="5,16,10,16" SelectedDateChanged="UpdateSuggestedDates"/>
 
                 <Label Content="Days" Grid.Column="0" Grid.Row="2" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                <TextBox x:Name="textBoxReservationDays" Grid.Column="1" Grid.Row="2" Margin="5,18,78,18" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="textBoxReservationDays" Grid.Column="1" Grid.Row="2" Margin="5,18,78,18" VerticalContentAlignment="Center" FontSize="15" TextChanged="UpdateSuggestedDates"/>
 
                 <Label Content="Guests" Grid.Column="0" Grid.Row="3" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                 <DockPanel Grid.Column="1" Grid.Row="2" Margin="5,57,0,0" Grid.RowSpan="2">
-                    <TextBox x:Name="textBoxSlider" Text="{Binding ElementName=slider, Path=Value}" Width="29" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15"/>
-                    <Slider x:Name="slider" Grid.Row="4" Grid.Column="1" Margin="5,16,10,16" Minimum="1" Maximum="20" Value="{Binding ElementName=textBoxSlider, Path=Text}" VerticalAlignment="Center" TickFrequency="1" IsSnapToTickEnabled="True"/>
+                    <TextBox x:Name="textBoxGuests" Text="{Binding ElementName=sliderGuests, Path=Value}" Width="29" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15" TextChanged="UpdateSuggestedDates"/>
+                    <Slider x:Name="sliderGuests" Grid.Row="4" Grid.Column="1" Margin="5,16,10,16" Minimum="1" Maximum="20" Value="{Binding ElementName=textBoxGuests, Path=Text}" VerticalAlignment="Center" TickFrequency="1" IsSnapToTickEnabled="True"/>
                 </DockPanel>
 
+                <Label x:Name="errorLabel" Content="" Margin="10,125,10,75" Grid.Row="4" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
                 <Button x:Name="buttonConfirm" Content="Confirm booking" Grid.Row="4" Margin="90,180,90,25" FontWeight="Bold" FontSize="13" Grid.ColumnSpan="2"/>
 
             </Grid>
 
             <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <Label Content="Suggested dates" Grid.Row="0" FontSize="20" FontWeight="SemiBold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-                <DataGrid Grid.Row="1" Margin="10,0,10,25"/>
+                <DataGrid x:Name="dataGridSuggestedDates" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False" Margin="10,0,10,25">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Start date" Binding="{Binding StartDate, StringFormat={}{0:dd-MM-yyyy}}" Width="*"/>
+                        <DataGridTextColumn Header="End date" Binding="{Binding EndDate, StringFormat={}{0:dd-MM-yyyy}}" Width="*"/>
+                    </DataGrid.Columns>
+                </DataGrid>
 
             </Grid>
         </Grid>
